--- a/carbon-agri-ui/package.json
+++ b/carbon-agri-ui/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@angular/animations": "^18.2.0",
     "@angular/cdk": "^18.2.10",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/material": "^18.2.10",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
+    "@angular/common": "^18.2.13",
+    "@angular/compiler": "^18.2.13",
+    "@angular/core": "^18.2.13",
+    "@angular/forms": "^18.2.13",
+    "@angular/material": "^18.2.13",
+    "@angular/platform-browser": "^18.2.13",
+    "@angular/platform-browser-dynamic": "^18.2.13",
+    "@angular/router": "^18.2.13",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
@@ -27,6 +28,7 @@
     "chart.js": "^4.4.6",
     "heatmap.js": "^2.0.5",
     "leaflet": "^1.7.1",
+    "leaflet-heatmap": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
